--- a/trialLesson/trialLesson/overview/templates/base_generic.html
+++ b/trialLesson/trialLesson/overview/templates/base_generic.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang='EN'>
 	<head>
-	  {% block title %}<title>DefenseMonkees Overview</title>{% endblock %}
-	  <meta charset="utf-8"/>
-	  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
-	  <!-- Add additional CSS in static file -->
-	  {% load static %}
-	  <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
-	  <link rel="stylesheet" href="{% static 'css/table.css' %}"/>
+		{% block title %}<title>DefenseMonkees Overview</title>{% endblock %}
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
+		<!-- Add additional CSS in static file -->
+		{% load static %}
+		<link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
+		<link rel="stylesheet" href="{% static 'css/table.css' %}"/>
+		<link rel="stylesheet" href="{% static 'css/inlog.css' %}"/>
+		<link rel="stylesheet" href="{% static 'css/navbar.css' %}"/> 
 	</head>
 	<body>
-	  <div class="container-fluid">
-	    <div class="row">
-	      <div class="col-sm-2">
-	      {% block sidebar %}
-	        <ul class="sidebar-nav">
-
-	         <li><a href="{% url 'index' %}"><img src="{% static 'img/aapje.png' %}"></a></li>
-	        </ul>
-	     {% endblock %}
-	      </div>
-	      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
-	    </div>
-	  </div>
+		<div class="container-fluid">
+			{% block navbar %}
+			<nav class="navbar fixed-top navbar-expand-md custom-navbar navbar-dark">
+				<img class="navbar-brand" src="{% static 'img/aapje.png' %}" id="logo" height="50px" alt="logo">
+				<button class="navbar-toggler navbar-toggler-right custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+					<span class="navbar-toggler-icon "></span>
+				</button>
+				<div class="collapse navbar-collapse " id="collapsibleNavbar">
+					<ul class="navbar-nav ml-auto ">
+						<li class="nav-item">
+							<a class="nav-link" href="#offer"><b>Login</b></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#"><b>Logoff</b></a>
+						</li> 
+					</ul>
+				</div>  
+			</nav>
+			{% endblock %}
+			{% block content %}
+			{% endblock %}
+		</div>
 	</body>
 </html>
