--- a/trialLesson/trialLesson/overview/templates/index.html
+++ b/trialLesson/trialLesson/overview/templates/index.html
@@ -1,60 +1,31 @@
 {% extends "base_generic.html" %}
-
 {% block content %}
-  <h1>Overview</h1>
+			<div class="container">
+				<h1 class="form-heading">login Form</h1>
+				<div class="login-form">
+					<div class="main-div">
+						<div class="panel">
+							<h2>Admin Login</h2>
+							<p>Please enter your email and password</p>
+						</div>
+							<form id="Login">
 
-<div class="bumb"></div>
-<h3>Rate of presence</h3>
+								<div class="form-group">
+									<input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+								</div>
 
-<table>
-  <thead>
-    <th>Day's</th>
-    <th>Percentage</th>
-    <th>Afanem absoluut</th>
-    <th>Afname %</th>
-    <th>Aantal</th>
-    <th>Totaal</th>
-  </thead>
-  <tbody id="myTable">
-    {% for row in rate_of_presence %}
-    <tr>
-      <td>{{ row.week }}</td>
-      <td>{{ row.percentage|floatformat:2 }}</td>
-      <td>{{ row.minusA|floatformat:2 }}</td>
-      <td>{{ row.minusP|floatformat:2 }}%</td>
-      <td>{{ row.aantal }}</td>
-      <td>{{ row.aantal_mensen_totaal }}</td>
-    </tr>   
-    {% endfor %}
-  </tbody>
-</table>
+								<div class="form-group">
+									<input type="password" class="form-control" id="inputPassword" placeholder="Password">
+								</div>
 
+								<div class="forgot">
+									<a href="reset.html">Forgot password?</a>
+								</div>
+								<button type="submit" class="btn btn-primary">Login</button>
 
-<div class="bumb"></div>
-<h3>Rate of Membership</h3>
-
-<table>
-  <thead>
-    <th>Day's</th>
-    <th>Percentage</th>
-    <th>Afanem absoluut</th>
-    <th>Afname %</th>
-    <th>Aantal</th>
-    <th>Totaal</th>
-  </thead>
-  <tbody id="myTable">
-    {% for row in rate_of_membership %}
-    <tr>
-      <td>{{ row.week }}</td>
-      <td>{{ row.percentage|floatformat:2 }}</td>
-      <td>{{ row.minusA|floatformat:2 }}</td>
-      <td>{{ row.minusP|floatformat:2 }}%</td>
-      <td>{{ row.aantal }}</td>
-      <td>{{ row.aantal_mensen_totaal }}</td>
-    </tr>   
-    {% endfor %}
-  </tbody>
-</table>
-
-
+							</form>
+						<p class="botto-text"> Designed by Sunil Rajput</p>
+					</div>
+				</div>
+			</div>
 {% endblock %}
