--- a/trialLesson/trialLesson/overview/templates/index.html
+++ b/trialLesson/trialLesson/overview/templates/index.html
@@ -8,14 +8,14 @@
 							<h2>Admin Login</h2>
 							<p>Please enter your email and password</p>
 						</div>
-							<form id="Login">
-
+							<form id="Login" action="" method="POST">
+								{% csrf_token %}
 								<div class="form-group">
-									<input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+									<input type="accountname" class="form-control" name="email" placeholder="Email Address">
 								</div>
 
 								<div class="form-group">
-									<input type="password" class="form-control" id="inputPassword" placeholder="Password">
+									<input type="password" class="form-control" name="password" placeholder="Password">
 								</div>
 
 								<div class="forgot">
@@ -24,7 +24,9 @@
 								<button type="submit" class="btn btn-primary">Login</button>
 
 							</form>
-						<p class="botto-text"> Designed by Sunil Rajput</p>
+
+							<p>{{ email }}</p>
+							<p>{{ password }}</p>
 					</div>
 				</div>
 			</div>
