--- a/trialLesson/trialLesson/overview/templates/index.html
+++ b/trialLesson/trialLesson/overview/templates/index.html
@@ -11,22 +11,18 @@
 							<form id="Login" action="" method="POST">
 								{% csrf_token %}
 								<div class="form-group">
-									<input type="accountname" class="form-control" name="email" placeholder="Email Address">
+									<input type="username" class="form-control" name="username" placeholder="username">
 								</div>
 
 								<div class="form-group">
 									<input type="password" class="form-control" name="password" placeholder="Password">
 								</div>
 
-								<div class="forgot">
-									<a href="reset.html">Forgot password?</a>
-								</div>
 								<button type="submit" class="btn btn-primary">Login</button>
 
 							</form>
 
-							<p>{{ email }}</p>
-							<p>{{ password }}</p>
+							<a href="{% url 'rateofpresence' %}">Link</a>
 					</div>
 				</div>
 			</div>
