login plus decorator
De login functie is gemaakt en werkt, de authenticator werkt ook en is getest. Logout werkt ook en is ook getest. Alleen als er word  uitgelogd dan zet hij in de URL /logout, dit moet weg plus de logout knop moet weg als er nog niet is ingelogd.

--- a/trialLesson/trialLesson/overview/templates/base_generic.html
+++ b/trialLesson/trialLesson/overview/templates/base_generic.html
@@ -26,7 +26,7 @@
 							<a class="nav-link" href="#offer"><b>Login</b></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#"><b>Logoff</b></a>
+							<a class="nav-link" href="{% url 'logout' %}"><b>Logoff</b></a>
 						</li> 
 					</ul>
 				</div>  
