--- a/trialLesson/trialLesson/overview/templates/rateofpresence.html
+++ b/trialLesson/trialLesson/overview/templates/rateofpresence.html
@@ -5,12 +5,13 @@
 
 <div class="bumb"></div>
 <h3>Rate of presence</h3>
+<h2>{{ token }}
 
 <table>
   <thead>
     <th>Day's</th>
     <th>Percentage</th>
-    <th>Afanem absoluut</th>
+    <th>Afname absoluut</th>
     <th>Afname %</th>
     <th>Aantal</th>
     <th>Totaal</th>
