--- a/trialLesson/trialLesson/overview/templates/index.html
+++ b/trialLesson/trialLesson/overview/templates/index.html
@@ -22,7 +22,7 @@
 
 							</form>
 
-							<a href="{% url 'rateofpresence' %}">Link</a>
+							<p>{{ message }}</p>
 					</div>
 				</div>
 			</div>
