--- a/trialLesson/trialLesson/overview/templates/rateofpresence.html
+++ b/trialLesson/trialLesson/overview/templates/rateofpresence.html
@@ -4,8 +4,10 @@
   <h1>Overview</h1>
 
 <div class="bumb"></div>
+<h2>Welkom {{ user.username }}</h2>
+
+<div class="bumb"></div>
 <h3>Rate of presence</h3>
-<h2>{{ token }}
 
 <table>
   <thead>
