bug inlog na uitlog
Er ontstond een foutmelding als er werd ingelogd nadat er werd uitgelogd. Deze fout is nu verholpen.

--- a/trialLesson/trialLesson/overview/templates/base_generic.html
+++ b/trialLesson/trialLesson/overview/templates/base_generic.html
@@ -11,6 +11,18 @@
 		<link rel="stylesheet" href="{% static 'css/table.css' %}"/>
 		<link rel="stylesheet" href="{% static 'css/inlog.css' %}"/>
 		<link rel="stylesheet" href="{% static 'css/navbar.css' %}"/> 
+
+		<!-- for the dataepicker -->
+		<!-- Font Awesome (added because you use icons in your prepend/append) -->
+		<link rel="stylesheet" href="https://formden.com/static/cdn/font-awesome/4.4.0/css/font-awesome.min.css" />
+
+		<!-- formden.js communicates with FormDen server to validate fields and submit via AJAX -->
+		<script type="text/javascript" src="https://formden.com/static/cdn/formden.js"></script>
+
+		<!-- Special version of Bootstrap that is isolated to content wrapped in .bootstrap-iso -->
+		<link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+
+
 	</head>
 	<body>
 		<div class="container-fluid">
